# TrainingMdetClassifier

./: .gitignore  LICENSE  README.md  README_en.md  README_ja.md  environment.yml  predict.py  pyproject.toml  test.py  train.py
configs/: test.yaml  train.yaml
configs/datamodule/: cifar.yaml  detector.yaml
configs/experiment/: detector_cls.yaml
configs/hparam_search/: optuna.yaml
configs/log_dir/: default.yaml
configs/model/: resnet.yaml
configs/optimizer/: adam.yaml
docs/: configs.md  install_python.md
notebooks/: models_summary.ipynb
scripts/: 230324bashlog.txt  250519trainExceptHuman.R  250519trainExceptHuman_sh.txt  run.sh
scripts/local/: 250530trainExceptHuman.R  250530trainExceptHuman_sh.txt  260213trainExceptHuman_stratified.R  260213trainExceptHuman_stratified.sh  260215sendfiles.sh  260215trainExceptHuman_notstratified.R  260215trainExceptHuman_notstratified.sh  260215trainExceptHuman_stratified.R  260215trainExceptHuman_stratified.sh  260216train_St_noSt.R  260216train_St_noSt.sh  260216train_St_noSt_cap.R  260216train_St_noSt_cap.sh  data_check260217  fromConsole260217.txt
src/: predict_pipline.py  testing_pipeline.py  training_pipeline.py
src/datamodules/: __init__.py  cifar.py  detector.py
src/datamodules/components/: detector_dataset.py  prediction_detector_dataset.py
src/utils/: __init__.py  history.py  logger.py
