[project]
name = "trainingmdetclassifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "colorlog>=6.9.0",
    "hydra-colorlog>=1.2.0",
    "hydra-core>=1.3.2",
    "hydra-optuna-sweeper>=1.2.0",
    "matplotlib>=3.9.4",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
    "rich>=14.0.0",
    "scikit-image>=0.24.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "torch==1.10.1",
    "torchinfo>=1.8.0",
    "torchvision==0.11.2",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
cpu = [
  "torch==1.10.1",
  "torchvision==0.11.2",
]
cu113 = [
  "torch==1.10.1",
  "torchvision==0.11.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.11.12",
    "mypy>=1.16.0",
    "isort>=6.0.1",
]


[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu113" },
  ],
]


[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu113", extra = "cu113" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu113", extra = "cu113" },
]

[[tool.uv.index]]
name = "pytorch-cu113"
url = "https://download.pytorch.org/whl/cu113"
explicit = true


[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

